@@ -5,41 +5,52 @@
 #' plot (like you're looking at it with a magnifying glass), and will not
 #' change the underlying data like setting limits on a scale will.
 #'
-#' @param xlim limits for the x axis
-#' @param ylim limits for the y axis
+#' @param xlim,ylim Limits for the x and y axes.
+#' @param expand If \code{TRUE}, the default, adds a small expansion factor to
+#'   the limits to ensure that data and axes don't overlap. If \code{FALSE},
+#'   limits are taken exactly from the data or \code{xlim}/\code{ylim}.
 #' @export
 #' @examples
 #' # There are two ways of zooming the plot display: with scales or
 #' # with coordinate systems.  They work in two rather different ways.
 #'
-#' (p <- ggplot(mtcars, aes(disp, wt)) +
-#'   geom_smooth())
+#' p <- ggplot(mtcars, aes(disp, wt)) +
+#'   geom_point() +
+#'   geom_smooth()
+#' p
 #'
-#' # Setting the limits on a scale will throw away all data that's not
-#' # inside these limits.  This is equivalent to plotting a subset of
-#' # the original data
+#' # Setting the limits on a scale converts all values outside the range to NA.
 #' p + scale_x_continuous(limits = c(325, 500))
 #'
-#' # Setting the limits on the coordinate system performs a visual zoom
-#' # the data is unchanged, and we just view a small portion of the original
-#' # plot.  See how the axis labels are the same as the original data, and
-#' # the smooth continue past the points visible on this plot.
+#' # Setting the limits on the coordinate system performs a visual zoom.
+#' # The data is unchanged, and we just view a small portion of the original
+#' # plot. Note how smooth continues past the points visible on this plot.
 #' p + coord_cartesian(xlim = c(325, 500))
 #'
+#' # By default, the same expansion factor is applied as when setting scale
+#' # limits. You can set the limits precisely by setting expand = FALSE
+#' p + coord_cartesian(xlim = c(325, 500), expand = FALSE)
+#'
+#' # Simiarly, we can use expand = FALSE to turn off expansion with the
+#' # default limits
+#' p + coord_cartesian(expand = FALSE)
+#'
 #' # You can see the same thing with this 2d histogram
-#' (d <- ggplot(diamonds, aes(carat, price)) +
-#'   stat_bin2d(bins = 25, colour = "grey50"))
+#' d <- ggplot(diamonds, aes(carat, price)) +
+#'   stat_bin2d(bins = 25, colour = "white")
+#' d
 #'
 #' # When zooming the scale, the we get 25 new bins that are the same
 #' # size on the plot, but represent smaller regions of the data space
-#' d + scale_x_continuous(limits = c(0, 2))
+#' d + scale_x_continuous(limits = c(0, 1))
 #'
 #' # When zooming the coordinate system, we see a subset of original 50 bins,
 #' # displayed bigger
-#' d + coord_cartesian(xlim = c(0, 2))
-coord_cartesian <- function(xlim = NULL, ylim = NULL) {
+#' d + coord_cartesian(xlim = c(0, 1))
+coord_cartesian <- function(xlim = NULL, ylim = NULL, expand = TRUE) {
   ggproto(NULL, CoordCartesian,
-    limits = list(x = xlim, y = ylim)
+    limits = list(x = xlim, y = ylim),
+    expand = expand
   )
 }
 
@@ -67,9 +78,14 @@ CoordCartesian <- ggproto("CoordCartesian", Coord,
   train = function(self, scale_details) {
     train_cartesian <- function(scale_details, limits, name) {
       if (is.null(limits)) {
-        range <- scale_dimension(scale_details, expand_default(scale_details))
+        range <- scale_dimension(scale_details)
       } else {
         range <- range(scale_transform(scale_details, limits))
+      }
+
+      if (self$expand) {
+        expand <- expand_default(scale_details)
+        range <- expand_range(range, expand[1], expand[2])
       }
 
       out <- scale_break_info(scale_details, range)
