@@ -4,12 +4,14 @@
 \alias{coord_cartesian}
 \title{Cartesian coordinates.}
 \usage{
-coord_cartesian(xlim = NULL, ylim = NULL)
+coord_cartesian(xlim = NULL, ylim = NULL, expand = TRUE)
 }
 \arguments{
-\item{xlim}{limits for the x axis}
+\item{xlim,ylim}{Limits for the x and y axes.}
 
-\item{ylim}{limits for the y axis}
+\item{expand}{If \code{TRUE}, the default, adds a small expansion factor to
+the limits to ensure that data and axes don't overlap. If \code{FALSE},
+limits are taken exactly from the data or \code{xlim}/\code{ylim}.}
 }
 \description{
 The Cartesian coordinate system is the most familiar, and common, type of
@@ -21,30 +23,38 @@ change the underlying data like setting limits on a scale will.
 # There are two ways of zooming the plot display: with scales or
 # with coordinate systems.  They work in two rather different ways.
 
-(p <- ggplot(mtcars, aes(disp, wt)) +
-  geom_smooth())
+p <- ggplot(mtcars, aes(disp, wt)) +
+  geom_point() +
+  geom_smooth()
+p
 
-# Setting the limits on a scale will throw away all data that's not
-# inside these limits.  This is equivalent to plotting a subset of
-# the original data
+# Setting the limits on a scale converts all values outside the range to NA.
 p + scale_x_continuous(limits = c(325, 500))
 
-# Setting the limits on the coordinate system performs a visual zoom
-# the data is unchanged, and we just view a small portion of the original
-# plot.  See how the axis labels are the same as the original data, and
-# the smooth continue past the points visible on this plot.
+# Setting the limits on the coordinate system performs a visual zoom.
+# The data is unchanged, and we just view a small portion of the original
+# plot. Note how smooth continues past the points visible on this plot.
 p + coord_cartesian(xlim = c(325, 500))
 
+# By default, the same expansion factor is applied as when setting scale
+# limits. You can set the limits precisely by setting expand = FALSE
+p + coord_cartesian(xlim = c(325, 500), expand = FALSE)
+
+# Simiarly, we can use expand = FALSE to turn off expansion with the
+# default limits
+p + coord_cartesian(expand = FALSE)
+
 # You can see the same thing with this 2d histogram
-(d <- ggplot(diamonds, aes(carat, price)) +
-  stat_bin2d(bins = 25, colour = "grey50"))
+d <- ggplot(diamonds, aes(carat, price)) +
+  stat_bin2d(bins = 25, colour = "white")
+d
 
 # When zooming the scale, the we get 25 new bins that are the same
 # size on the plot, but represent smaller regions of the data space
-d + scale_x_continuous(limits = c(0, 2))
+d + scale_x_continuous(limits = c(0, 1))
 
 # When zooming the coordinate system, we see a subset of original 50 bins,
 # displayed bigger
-d + coord_cartesian(xlim = c(0, 2))
+d + coord_cartesian(xlim = c(0, 1))
 }
 
