@@ -4,10 +4,16 @@
 \alias{coord_flip}
 \title{Flipped cartesian coordinates.}
 \usage{
-coord_flip(...)
+coord_flip(xlim = NULL, ylim = NULL, expand = TRUE)
 }
 \arguments{
-\item{...}{Other arguments passed onto \code{\link{coord_cartesian}}}
+\item{xlim}{Limits for the x and y axes.}
+
+\item{ylim}{Limits for the x and y axes.}
+
+\item{expand}{If \code{TRUE}, the default, adds a small expansion factor to
+the limits to ensure that data and axes don't overlap. If \code{FALSE},
+limits are taken exactly from the data or \code{xlim}/\code{ylim}.}
 }
 \description{
 Flipped cartesian coordinates so that horizontal becomes vertical, and
@@ -15,16 +21,12 @@ vertical, horizontal. This is primarily useful for converting geoms and
 statistics which display y conditional on x, to x conditional on y.
 }
 \examples{
-\donttest{
 # Very useful for creating boxplots, and other interval
 # geoms in the horizontal instead of vertical position.
-ggplot(diamonds, aes(cut, price)) +
-  geom_boxplot()
-last_plot() + coord_flip()
 
-ggplot(diamonds, aes(cut)) +
-  geom_bar()
-last_plot() + coord_flip()
+ggplot(diamonds, aes(cut, price)) +
+  geom_boxplot() +
+  coord_flip()
 
 h <- ggplot(diamonds, aes(carat)) +
   geom_histogram()
@@ -32,11 +34,10 @@ h
 h + coord_flip()
 h + coord_flip() + scale_x_reverse()
 
-# You can also use it to flip lines and area plots:
-df <- data.frame(x = 1:5, y = (1:5)^2)
+# You can also use it to flip line and area plots:
+df <- data.frame(x = 1:5, y = (1:5) ^ 2)
 ggplot(df, aes(x, y)) +
- geom_area()
+  geom_area()
 last_plot() + coord_flip()
-}
 }
 
